--- a/css/all.css
+++ b/css/all.css
@@ -28,7 +28,7 @@
 * {
 	max-height: 10000px;
 }
-body{
+body.server{
 	margin:0;
 	color:#898989;
 	font:19px/25px NimbusSan-Lig, Arial, Helvetica, sans-serif;
